--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@tspower/template",
+  "name": "@tspower/select",
   "version": "1.0.0",
-  "description": "template description",
-  "main": "./lib/template.js",
-  "types": "./lib/template.d.ts",
+  "description": "a simple select element",
+  "main": "./lib/select.js",
+  "types": "./lib/select.d.ts",
   "directories": {
     "doc": "docs",
     "lib": "lib",
@@ -30,5 +30,7 @@
     "typedoc": "^0.13.0"
   },
   "dependencies": {
+    "@tspower/core": "^1.5.0",
+    "rxjs": "^6.3.3"
   }
 }
